# bat-native-usermodel

./: .gitignore  .gitmodules  .travis.yml  BUILD.gn  Dockerfile  README.md  TODO.md  bag_of_words_extractor.cc  bag_of_words_extractor.h  catch.hpp  gclient_args.gni  linear_svm.json  logistic_regression.cc  logistic_regression.h  naive_bayes.cc  naive_bayes.h  pipeline.pb.cc  pipeline.pb.h  relevance_model.json  stmr.c  test.cc
.github/workflows/: codeql-analysis.yml
data/: logPwGc.json  predictions.json  prior.json  svm_scores.json  text114.txt  text115.txt  text129.txt  text131.txt  text161.txt  text179.txt  text181.txt  text235.txt  text243.txt  text250.txt  text273.txt  text279.txt  text333.txt  text368.txt  text370.txt  text381.txt  text394.txt  text398.txt  text399.txt  text4.txt  text406.txt  text408.txt  text448.txt  text473.txt  text482.txt  text497.txt  text500.txt  text509.txt  text53.txt  text532.txt  text541.txt  text553.txt  text561.txt  text599.txt  text608.txt  text626.txt  (+10 more)
include/: CPPLINT.cfg  ad.h  ad_catalog.h  ads_agent.h  ads_relevance.h  export.h  linear_regression.h  notification_delivery.h  notification_event_type.h  user_model.h  user_model_callback_handler.h  user_profile.h  usermodel_callback_handler.h
include/bat/usermodel/: ad.h  ad_catalog.h  export.h  notification_event_type.h  user_model.h  user_model_callback_handler.h  user_profile.h
scripts/: cpplint.py
src/: BUILD.gn  CPPLINT.cfg  ad.cc  ad_catalog.cc  ads_agent.cc  ads_ranker.h  ads_relevance.cc  advertising_categories.h  bag_of_words_extractor.cc  bag_of_words_extractor.h  bigram_extractor.cc  bigram_extractor.h  classifier.cc  classifier.h  data_point.cc  data_point.h  hash_check.json  hashing_extractor.cc  hashing_extractor.h  linear_regression.cc  logistic_regression.cc  logistic_regression.h  naive_bayes.cc  naive_bayes.h  notification_event_type.h  pipeline.cc  pipeline.h  pipeline.pb.cc  pipeline.pb.h  pipeline.proto  static_values.h  stmr.c  stmr.h  test_data_point.cc  test_hashing.cc  test_model_loading.cc  test_transform.cc  tmp.cc  transformation.cc  transformation.h  (+6 more)
test/: classifier_unittest.cc  data_point_unittest.cc  hashing_extractor_unittest.cc  pipeline_unittest.cc  transformation_test.cc  transformation_unittest.cc  usermodel_unittest.cc
test/data/: hash_check.json  invalid-predictions.json  pipeline.json  predictions.json  text10.txt  text102.txt  text108.txt  text112.txt  text124.txt  text131.txt  text134.txt  text155.txt  text167.txt  text187.txt  text212.txt  text22.txt  text275.txt  text28.txt  text293.txt  text337.txt  text349.txt  text35.txt  text358.txt  text359.txt  text371.txt  text373.txt  text378.txt  text391.txt  text414.txt  text418.txt  text419.txt  text425.txt  text445.txt  text450.txt  text454.txt  text481.txt  text523.txt  text536.txt  text6.txt  text609.txt  (+10 more)
